--- a/untitled1/pom.xml
+++ b/untitled1/pom.xml
@@ -66,6 +66,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.1.Final</version>
+        </dependency>
 
 
 
