--- a/untitled1/pom.xml
+++ b/untitled1/pom.xml
@@ -72,6 +72,14 @@
             <version>8.0.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
+
+
 
 
     </dependencies>
