--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,6 @@
- server.port=8070
+server.port=8070
+
+spring.datasource.url=jdbc:postgresql://localhost/demo
+spring.datasource.username=postgres
+spring.datasource.password=1556
+spring.jpa.hibernate.ddl-auto=update
