--- a/buysell/src/main/resources/application.properties
+++ b/buysell/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8090
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/buysell
+spring.datasource.username=postgres
+spring.datasource.password=1556
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
