--- a/buysell/src/main/resources/application.properties
+++ b/buysell/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=postgres
 spring.datasource.password=1556
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.datasource.hikari.auto-commit=false
