--- a/buysell/src/main/resources/application.properties
+++ b/buysell/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.datasource.hikari.auto-commit=false
+spring.freemarker.expose-request-attributes=true
